--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-    <meta http-equiv="refresh" content="0;url=/pages/index.php?page=landing">
+    <meta http-equiv="refresh" content="0;url=/pages/landing.php">
 </head>
 </html>
