--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,6 +10,8 @@
     <!-- Bootstrap -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/font-awesome.min.css" rel="stylesheet">
+    <link href="../css/header.css" rel="stylesheet">
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -19,19 +21,38 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
-    <i class="fa fa-search" aria-hidden="true"></i>
-    <input type="text" name="search" placeholder="Search..." >
-    <form>
-      <input type="text" name="username" placeholder="Username" >
-      <input type="text" name="password" placeholder="Password" >
-      <input type="submit" name="submit" value="Login" >
-    </form>
-    <input type="submit" name="submit" value="Login with Google" >
-    <a href="abc.com">Register</a>
-  </body>
-</html>
+</head>
+<body>
+<nav class="navbar navbar-default navbar-static-top" id="header">
+
+    <div id="header-container">
+        <div class="col-xs-5">
+            <input class="pull-right" type="text" name="search" placeholder="Search...">
+        </div>
+        <div class="col-xs-4 col-xs-offset-3 visible-md visible-lg">
+            <form>
+                <input type="text" name="username" placeholder="Username">
+                <input type="text" name="password" placeholder="Password">
+                <input type="submit" name="submit" value="Login">
+            </form>
+        </div>
+    </div>
+
+    <div id="sidebar">
+        <ul class="nav navbar-nav">
+            <li><a href="landing.php"><i class="fa fa-home" aria-hidden="true"></i></a></li>
+            <li><a href="profile.php"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+            <li><a href="milestones.php"><i class="fa fa-clock-o" aria-hidden="true"></i></i></a></li>
+            <li><a href="project.php"><i class="fa fa-briefcase" aria-hidden="true"></i></a></li>
+            <li><a href="tasks.php"><i class="fa fa-tasks" aria-hidden="true"></i></a></li>
+            <li><a href="statistics.php"><i class="fa fa-line-chart" aria-hidden="true"></i></a></li>
+
+        </ul>
+    </div>
+</nav>
+
+<div id="parent">
+    <div id="main-content">
