Projects page template

--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/font-awesome.min.css" rel="stylesheet">
-    <link href="../css/header.css" rel="stylesheet">
+    <link href="../css/global.css" rel="stylesheet">
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
