--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -29,7 +29,10 @@
 <nav class="navbar navbar-default navbar-static-top" id="header">
 
     <div id="header-container">
-        <div class="col-xs-5">
+        <div class="col-xs-1">
+            <img src="../img/scrum.png" alt="Logo" style="width:3.5em;height:2.5em;">
+        </div>
+        <div class="col-xs-4">
             <input class="pull-right" type="text" name="search" placeholder="Search...">
         </div>
         <div class="col-xs-4 col-xs-offset-3 visible-md visible-lg">
