--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -10,12 +10,12 @@
     <!-- Bootstrap -->
     <link href="../css/font-awesome.min.css" rel="stylesheet">
     <link href="../css/global.css" rel="stylesheet">
+    <link href="../bootstrap-sass-3.3.7/assets/stylesheets/_bootstrap.css" rel="stylesheet">
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="../bootstrap-sass-3.3.7/assets/javascripts/bootstrap.min.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
