--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -29,7 +29,7 @@
 
     <div id="header-container">
         <div class="col-xs-1">
-            <img src="../img/logo.png" alt="Logo">
+            <a href="landing.php"><img src="../img/logo.png" alt="Logo"></a>
         </div>
         <div class="col-xs-4">
             <input class="pull-right" type="text" name="search" placeholder="Search...">
@@ -43,16 +43,6 @@
         </div>
     </div>
 
-    <div id="sidebar">
-        <ul class="nav navbar-nav">
-            <li><a href="landing.php"><i class="fa fa-home" aria-hidden="true"></i></a></li>
-            <li><a href="profile.php"><i class="fa fa-user" aria-hidden="true"></i></a></li>
-            <li><a href="milestones.php"><i class="fa fa-clock-o" aria-hidden="true"></i></i></a></li>
-            <li><a href="project.php"><i class="fa fa-briefcase" aria-hidden="true"></i></a></li>
-            <li><a href="tasks.php"><i class="fa fa-tasks" aria-hidden="true"></i></a></li>
-            <li><a href="statistics.php"><i class="fa fa-line-chart" aria-hidden="true"></i></a></li>
-
-        </ul>
     </div>
 </nav>
 
