Add projects pages css

--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -10,6 +10,8 @@
     <!-- Bootstrap -->
     <link href="../css/font-awesome.min.css" rel="stylesheet">
     <link href="../css/global.css" rel="stylesheet">
+    <link href="../css/project.css" rel="stylesheet">
+
     <link href="../bootstrap-sass-3.3.7/assets/stylesheets/_bootstrap.css" rel="stylesheet">
 
 
@@ -41,8 +43,6 @@
                 <input type="submit" name="submit" value="Login">
             </form>
         </div>
-    </div>
-
     </div>
 </nav>
 
