Improve project-related pages

--- a/src/pages/project_navbar.html
+++ b/src/pages/project_navbar.html
@@ -4,9 +4,11 @@
     <li><a href="project.php" title="back to my projects"><i class="fa fa-arrow-left" aria-hidden="true"></i></a></li>
     <li><a href="project_dashboard.php" title="project dashboard"><i class="fa fa-briefcase" aria-hidden="true"></i></a></li>
     <li><a href="collaborators.php" title="project collaborators"><i class="fa fa-users" aria-hidden="true"></i></a></li>
+    <li><a href="project_forum.php" title="project forum"><i class="fa fa-comments" aria-hidden="true"></i></a></li>
     <li><a href="tasks.php" title="tasks"><i class="fa fa-tasks" aria-hidden="true"></i></i></a></li>
     <li><a href="milestones.php" title="milestones"><i class="fa fa-calendar" aria-hidden="true"></i></a></li>
     <li><a href="statistics.php" title="statistics"><i class="fa fa-line-chart" aria-hidden="true"></i></a></li>
+    <li><a href="settings.php" title="settings"><i class="fa fa-cog" aria-hidden="true"></i></a></li>
 
   </ul>
 </div>
