project forum page and rounded corners on header

--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -25,6 +25,12 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+	<style>
+	input{
+		border: 0.1em solid #343434;
+		border-radius: 0.3em;
+	}
+	</style>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-static-top" id="header">
@@ -34,7 +40,7 @@
             <a href="landing.php"><img src="../img/logo.png" alt="Logo"></a>
         </div>
         <div class="col-xs-4">
-            <input class="pull-right" type="text" name="search" placeholder="Search...">
+				<input class="col-md-3 pull-right" type="text" name="search" placeholder="Search...">
         </div>
         <div class="col-xs-4 col-xs-offset-3 visible-md visible-lg">
             <form>
