Landing page css

--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -37,7 +37,7 @@
 
     <div id="header-container">
         <div class="col-xs-1">
-            <a href="landing.php"><img src="../img/logo.png" alt="Logo"></a>
+            <a href="landing.php"><img src="../assets/logo.png" alt="Logo"></a>
         </div>
         <div class="col-xs-4">
 				<input class="col-md-3 pull-right" type="text" name="search" placeholder="Search...">
