search results and profile page

--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -11,6 +11,9 @@
     <link href="../css/font-awesome.min.css" rel="stylesheet">
     <link href="../css/global.css" rel="stylesheet">
     <link href="../css/project.css" rel="stylesheet">
+    <link href="../css/search_results.css" rel="stylesheet">
+    <link href="../css/profile.css" rel="stylesheet">
+
 
     <link href="../bootstrap-sass-3.3.7/assets/stylesheets/_bootstrap.css" rel="stylesheet">
 
