--- a/src/pages/project_navbar.html
+++ b/src/pages/project_navbar.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default navbar-static-top" id="sidebar">
   <ul class="nav navbar-nav">
 
-    <li><a href="project.php" title="back to my projects"><i class="fa fa-arrow-left" aria-hidden="true"></i></a></li>
+    <li><a href="projects.php" title="back to my projects"><i class="fa fa-arrow-left" aria-hidden="true"></i></a></li>
     <li><a href="project_dashboard.php" title="project dashboard"><i class="fa fa-briefcase" aria-hidden="true"></i></a></li>
     <li><a href="collaborators.php" title="project collaborators"><i class="fa fa-users" aria-hidden="true"></i></a></li>
     <li><a href="project_forum.php" title="project forum"><i class="fa fa-comments" aria-hidden="true"></i></a></li>
