Improve header mobile compatibility

--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -43,9 +43,9 @@
             <a href="landing.php"><img src="../assets/logo.png" alt="Logo"></a>
         </div>
         <div class="col-xs-4">
-				<input class="col-md-3 pull-right" type="text" name="search" placeholder="Search...">
+				<input class="col-md-3 col-sm-6 col-xs-6 pull-right" type="text" name="search" placeholder="Search...">
         </div>
-        <div class="col-xs-4 col-xs-offset-3 visible-md visible-lg">
+        <div class="col-md-4 col-sm-4 col-xs-4 col-sm-offset-3 col-xs-offset-3">
             <form>
                 <input type="text" name="username" placeholder="Username">
                 <input type="text" name="password" placeholder="Password">
