--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -9,10 +9,10 @@
 
     <!-- Bootstrap -->
     <link href="../css/font-awesome.min.css" rel="stylesheet">
-    <link href="../css/global.css" rel="stylesheet">
-    <link href="../css/project.css" rel="stylesheet">
-    <link href="../css/search_results.css" rel="stylesheet">
-    <link href="../css/profile.css" rel="stylesheet">
+    <link href="../css/global.min.css" rel="stylesheet">
+    <link href="../css/project.min.css" rel="stylesheet">
+    <link href="../css/search_results.min.css" rel="stylesheet">
+    <link href="../css/profile.min.css" rel="stylesheet">
 
 
     <link href="../bootstrap-sass-3.3.7/assets/stylesheets/_bootstrap.css" rel="stylesheet">
