--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -13,6 +13,7 @@
     <link href="../css/project.min.css" rel="stylesheet">
     <link href="../css/search_results.min.css" rel="stylesheet">
     <link href="../css/profile.min.css" rel="stylesheet">
+    <link href="../css/header.min.css" rel="stylesheet">
 
 
     <link href="../bootstrap-sass-3.3.7/assets/stylesheets/_bootstrap.css" rel="stylesheet">
@@ -28,29 +29,23 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-	<style>
-	input{
-		border: 0.1em solid #343434;
-		border-radius: 0.3em;
-	}
-	</style>
+    <style>
+        input {
+            border: 0.1em solid #343434;
+            border-radius: 0.3em;
+        }
+    </style>
 </head>
 <body>
-<nav class="navbar navbar-default navbar-static-top" id="header">
-
-    <div id="header-container">
-        <div class="col-xs-1">
-            <a href="landing.php"><img src="../assets/logo.png" alt="Logo"></a>
-        </div>
-        <div class="col-xs-4">
-				<input class="col-md-3 col-sm-6 col-xs-6 pull-right" type="text" name="search" placeholder="Search...">
-        </div>
-        <div class="col-md-4 col-sm-4 col-xs-4 col-sm-offset-3 col-xs-offset-3">
-            <form>
-                <input type="text" name="username" placeholder="Username">
-                <input type="text" name="password" placeholder="Password">
-                <input type="submit" name="submit" value="Login">
-            </form>
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+            </button>
+            <a class="navbar-brand page-scroll" href="#page-top">ScrumHub</a>
         </div>
     </div>
 </nav>
