Delete landing, change index.html and add signinup button

--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -47,6 +47,14 @@
             </button>
             <a class="navbar-brand page-scroll" href="#page-top">ScrumHub</a>
         </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="#signinup">Sign In/Up</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
 
