--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -23,6 +23,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="../bootstrap-sass-3.3.7/assets/javascripts/bootstrap.min.js"></script>
 
+    <script src="../js/landing_modal.js"></script>
+    <link href="../css/landing_modal.css" rel="stylesheet">
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -37,6 +40,100 @@
     </style>
 </head>
 <body>
+
+  <!-- BEGIN # MODAL LOGIN -->
+<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
+    <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header" align="center">
+        <img class="img-circle" id="img_logo" src="http://bootsnipp.com/img/logo.jpg">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+        </button>
+      </div>
+
+              <!-- Begin # DIV Form -->
+              <div id="div-forms">
+
+                  <!-- Begin # Login Form -->
+                  <form id="login-form">
+                  <div class="modal-body">
+              <div id="div-login-msg">
+                              <div id="icon-login-msg" class="glyphicon glyphicon-chevron-right"></div>
+                              <span id="text-login-msg">Type your username and password.</span>
+                          </div>
+              <input id="login_username" class="form-control" type="text" placeholder="Username (type ERROR for error effect)" required>
+              <input id="login_password" class="form-control" type="password" placeholder="Password" required>
+                          <div class="checkbox">
+                              <label>
+                                  <input type="checkbox"> Remember me
+                              </label>
+                          </div>
+                </div>
+              <div class="modal-footer">
+                          <div>
+                              <button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
+                          </div>
+                <div>
+                              <button id="login_lost_btn" type="button" class="btn btn-link">Lost Password?</button>
+                              <button id="login_register_btn" type="button" class="btn btn-link">Register</button>
+                          </div>
+              </div>
+                  </form>
+                  <!-- End # Login Form -->
+
+                  <!-- Begin | Lost Password Form -->
+                  <form id="lost-form" style="display:none;">
+                <div class="modal-body">
+              <div id="div-lost-msg">
+                              <div id="icon-lost-msg" class="glyphicon glyphicon-chevron-right"></div>
+                              <span id="text-lost-msg">Type your e-mail.</span>
+                          </div>
+              <input id="lost_email" class="form-control" type="text" placeholder="E-Mail (type ERROR for error effect)" required>
+                </div>
+              <div class="modal-footer">
+                          <div>
+                              <button type="submit" class="btn btn-primary btn-lg btn-block">Send</button>
+                          </div>
+                          <div>
+                              <button id="lost_login_btn" type="button" class="btn btn-link">Log In</button>
+                              <button id="lost_register_btn" type="button" class="btn btn-link">Register</button>
+                          </div>
+              </div>
+                  </form>
+                  <!-- End | Lost Password Form -->
+
+                  <!-- Begin | Register Form -->
+                  <form id="register-form" style="display:none;">
+                  <div class="modal-body">
+              <div id="div-register-msg">
+                              <div id="icon-register-msg" class="glyphicon glyphicon-chevron-right"></div>
+                              <span id="text-register-msg">Register an account.</span>
+                          </div>
+              <input id="register_username" class="form-control" type="text" placeholder="Username (type ERROR for error effect)" required>
+                          <input id="register_email" class="form-control" type="text" placeholder="E-Mail" required>
+                          <input id="register_password" class="form-control" type="password" placeholder="Password" required>
+                </div>
+              <div class="modal-footer">
+                          <div>
+                              <button type="submit" class="btn btn-primary btn-lg btn-block">Register</button>
+                          </div>
+                          <div>
+                              <button id="register_login_btn" type="button" class="btn btn-link">Log In</button>
+                              <button id="register_lost_btn" type="button" class="btn btn-link">Lost Password?</button>
+                          </div>
+              </div>
+                  </form>
+                  <!-- End | Register Form -->
+
+              </div>
+              <!-- End # DIV Form -->
+
+    </div>
+  </div>
+</div>
+  <!-- END # MODAL LOGIN -->
+
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -51,10 +148,12 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="#signinup">Sign In/Up</a>
+                    <a href="#signinup" data-toggle="modal" data-target="#login-modal">Sign In/Up</a>
                 </li>
             </ul>
         </div>
+
+
     </div>
 </nav>
 
