--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -24,7 +24,7 @@
     <script src="../bootstrap-sass-3.3.7/assets/javascripts/bootstrap.min.js"></script>
 
     <script src="../js/landing_modal.js"></script>
-    <link href="../css/landing_modal.css" rel="stylesheet">
+    <link href="../css/landing_modal.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
