--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -60,12 +60,8 @@
                 <!-- Begin # Login Form -->
                 <form id="login-form">
                     <div class="modal-body">
-                        <div id="div-login-msg">
-                            <div id="icon-login-msg" class="glyphicon glyphicon-chevron-right"></div>
-                            <span id="text-login-msg">Type your username and password.</span>
-                        </div>
                         <input id="login_username" class="form-control" type="text"
-                               placeholder="Username (type ERROR for error effect)" required>
+                               placeholder="Username" required>
                         <input id="login_password" class="form-control" type="password" placeholder="Password" required>
                         <div class="checkbox">
                             <label>
@@ -88,12 +84,8 @@
                 <!-- Begin | Lost Password Form -->
                 <form id="lost-form" style="display:none;">
                     <div class="modal-body">
-                        <div id="div-lost-msg">
-                            <div id="icon-lost-msg" class="glyphicon glyphicon-chevron-right"></div>
-                            <span id="text-lost-msg">Type your e-mail.</span>
-                        </div>
                         <input id="lost_email" class="form-control" type="text"
-                               placeholder="E-Mail (type ERROR for error effect)" required>
+                               placeholder="E-Mail" required>
                     </div>
                     <div class="modal-footer">
                         <div>
@@ -110,14 +102,16 @@
                 <!-- Begin | Register Form -->
                 <form id="register-form" style="display:none;">
                     <div class="modal-body">
-                        <div id="div-register-msg">
-                            <div id="icon-register-msg" class="glyphicon glyphicon-chevron-right"></div>
-                            <span id="text-register-msg">Register an account.</span>
-                        </div>
+                        <input id="register_name1" class="form-control" type="text"
+                               placeholder="First Name" required>
+                        <input id="register_name2" class="form-control" type="text"
+                               placeholder="Last Name" required>
                         <input id="register_username" class="form-control" type="text"
-                               placeholder="Username (type ERROR for error effect)" required>
+                               placeholder="Username" required>
                         <input id="register_email" class="form-control" type="text" placeholder="E-Mail" required>
                         <input id="register_password" class="form-control" type="password" placeholder="Password"
+                               required>
+                        <input id="register_password" class="form-control" type="password" placeholder="Repeat Password"
                                required>
                     </div>
                     <div class="modal-footer">
@@ -154,7 +148,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="#signinup" data-toggle="modal" data-target="#login-modal">Sign In/Up</a>
+                    <a id="signinup" href="#signinup" data-toggle="modal" data-target="#login-modal">Sign In/Up</a>
                 </li>
             </ul>
         </div>
