--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -14,7 +14,7 @@
     <link href="../css/search_results.min.css" rel="stylesheet">
     <link href="../css/profile.min.css" rel="stylesheet">
     <link href="../css/header.min.css" rel="stylesheet">
-    <link href="../css/landing_modal.min.css" rel="stylesheet">
+    <link href="../css/login_modal.min.css" rel="stylesheet">
 
 
     <link href="../bootstrap-sass-3.3.7/assets/stylesheets/_bootstrap.css" rel="stylesheet">
