started project related pages overhaul

--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -10,7 +10,8 @@
     <!-- Bootstrap -->
     <link href="../css/font-awesome.min.css" rel="stylesheet">
     <link href="../css/global.min.css" rel="stylesheet">
-    <link href="../css/project.min.css" rel="stylesheet">
+    <link href="../css/project_dashboard.min.css" rel="stylesheet">
+    <link href="../css/project_forum.min.css" rel="stylesheet">
     <link href="../css/search_results.min.css" rel="stylesheet">
     <link href="../css/profile.min.css" rel="stylesheet">
     <link href="../css/header.min.css" rel="stylesheet">
