--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -15,18 +15,17 @@
     <link href="../css/search_results.min.css" rel="stylesheet">
     <link href="../css/profile.min.css" rel="stylesheet">
     <link href="../css/header.min.css" rel="stylesheet">
-    <link href="../css/login_modal.min.css" rel="stylesheet">
 
 
     <link href="../bootstrap-sass-3.3.7/assets/stylesheets/_bootstrap.css" rel="stylesheet">
-
-
+    
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="../bootstrap-sass-3.3.7/assets/javascripts/bootstrap.min.js"></script>
 
-    <script src="../js/landing_modal.js"></script>
-    <link href="../css/landing_modal.min.css" rel="stylesheet">
+    <link href="../css/login_modal.min.css" rel="stylesheet">
+    <script src="../js/login_modal.js"></script>
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
