--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -18,7 +18,7 @@
 
 
     <link href="../bootstrap-sass-3.3.7/assets/stylesheets/_bootstrap.css" rel="stylesheet">
-    
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="../bootstrap-sass-3.3.7/assets/javascripts/bootstrap.min.js"></script>
@@ -145,12 +145,25 @@
             <a class="navbar-brand page-scroll" href="#page-top">ScrumHub</a>
         </div>
 
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a id="signinup" href="#signinup" data-toggle="modal" data-target="#login-modal">Sign In/Up</a>
-                </li>
-            </ul>
+        <div class="row">
+            <div class="col-md-3 col-xs-4 col-xs-offset-2">
+                <div class="input-group search-input-group">
+                    <input type="text" class="form-control" placeholder="Search...">
+                    <span class="input-group-addon">
+                        <button type="submit">
+                            <span><i class="fa fa-search" aria-hidden="true"></i></span>
+                        </button>
+                    </span>
+                </div>
+            </div>
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a id="signinup" href="#signinup" data-toggle="modal" data-target="#login-modal">Sign In/Up</a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
 
