Update landing page

--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -71,8 +71,11 @@
                     </div>
                     <div class="modal-footer">
                         <div>
-                            <button type="submit" class="btn btn-lg btn-block">Login</button>
+                            <button id="login-btn" type="submit" class="btn btn-lg btn-block">Login</button>
                         </div>
+                        <button class="loginBtn loginBtn--google">
+                            Login with Google
+                        </button>
                         <div>
                             <button id="login_lost_btn" type="button" class="btn btn-link">Lost Password?</button>
                             <button id="login_register_btn" type="button" class="btn btn-link">Register</button>
