--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -145,22 +145,22 @@
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">ScrumHub</a>
+            <a class="navbar-brand page-scroll" href="landing.php">ScrumHub</a>
         </div>
 
         <div class="row">
-            <div class="col-md-3 col-xs-4 col-xs-offset-2">
-                <div class="input-group search-input-group">
-                    <input type="text" class="form-control" placeholder="Search...">
-                    <span class="input-group-addon">
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <div class="col-md-3 col-xs-4 col-xs-offset-2">
+                    <div class="input-group search-input-group">
+                        <input type="text" class="form-control" placeholder="Search...">
+                        <span class="input-group-addon">
                         <button type="submit">
                             <span><i class="fa fa-search" aria-hidden="true"></i></span>
                         </button>
                     </span>
+                    </div>
                 </div>
-            </div>
-
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a id="signinup" href="#signinup" data-toggle="modal" data-target="#login-modal">Sign In/Up</a>
