--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -27,6 +27,10 @@
     <link href="../css/login_modal.min.css" rel="stylesheet">
     <script src="../js/login_modal.js"></script>
 
+    <!-- bootstrap tags plugin -->
+    <script src="../bootstrap-tagsinput/src/bootstrap-tagsinput.js"></script>
+    <link rel="stylesheet" href="../bootstrap-tagsinput/src/bootstrap-tagsinput.css">
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
